# vito-agri-tutorials

./: LICENSE  README.md  pyproject.toml
notebooks/drought/: 1_ndvi_anomalies.ipynb  2_asis_data_access.ipynb  3_wapor_data_access.ipynb  sandbox.ipynb
src/vito_agri_tutorials/: __init__.py
src/vito_agri_tutorials/fao/: asis.py  wapor.py  wpop.py
src/vito_agri_tutorials/openeo/: auth.py  extract_data.py  utils.py
src/vito_agri_tutorials/resources/: ASI_colormap.txt  MVHI_colormap.txt  VHI_colormap.txt
src/vito_agri_tutorials/utils/: anomalies.py  geo.py  map.py  upperenvelop.py
